  whatever the destination filter should be added to the add link when
  the NF_RELATION_AUTOLINK flag is set. [Peter]
+ Added theme resource, allows you to include other Smarty theme templates 
  using {include file="theme:template.tpl} syntax. The resource will make 
  sure you get the correct file from the correct directory (even works for
  overrides at the theme level). [Peter]
* atkMetaPolicy::add, atkMetaPolicy::setType now support an array of 
  attribute names as argument for the attribute name parameter. [Peter]
* atkManyToOneRelation now shows the none label when viewing the value
  read-only and nothing is selected. [Peter]
* Fixed path handling in atkTestCase when running single tests. [Patrick]
* Fixed bug in atkcustomrecordlist. When a field has the flag AF_HIDE_LIST 
  it will not be visible in the csv export. [dennisjan]
* Fixed issue with O2M and M2O relations where sometimes not all possible
  values were shown. [Peter,Boy,Tjeerd]
* atkTime now only returns integers for getHours, getMinutes, etc. [Boy]
* Added ability to register modifiers. [Boy]
* Changed function exportFile for IE7. If IE => inline to attachment [Koen]
* Fixed atkSaveHandler rollback/commit behaviour. [Peter]
* Fixed atkOci8Db/atkOci9Db rollback/commit behaviour. [Peter]
* ZendPlatform 3.x session clustering id compatibility. ZP3.x uses a hyphen
  in their session id which conflicted with the isValidSessionId function.
  [Martin]
* Added file_exists() check to atkFileAttribute before calling the filesize()
  function to prevent unnecessary error messages. [Patrick]
* Fixed calendar-runner. Two different types of date field (one where you input
  the date and another one where you input the date using the date selection
  boxes could cause problems because the Calendar object was re-used). [Peter]
* Fixed export handling of (extended) search values. [Peter]
* Changed onChange event for radioattrbiute to onClick event. It still uses