@@ -14,6 +14,14 @@
    * @version $Revision$
    * $Id$
    */
+  
+  list($usec, $sec) = explode(" ", microtime());
+  
+  /**
+   * Current microtime, to see when exactly this request started.
+   * @var float
+   */
+  $g_startTime = (float)$usec + (float)$sec; // can't use getmicrotime here because it isn't available yet
 
   /**
    * Global theme variable, must be declared before the includes
